[gd_scene load_steps=9 format=3 uid="uid://vmqyqb4yfsos"]

[ext_resource type="Theme" uid="uid://bueidph1nopmi" path="res://componentes/popUps/popUpFundo.tres" id="1_4hjoo"]
[ext_resource type="Script" path="res://componentes/popUps/popUpNotificacao/popUpNotificacao.gd" id="2_b1cgn"]
[ext_resource type="Theme" uid="uid://dvbp11qywc6mv" path="res://componentes/popUps/popUp.tres" id="2_sm57t"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="4_afug0"]
[ext_resource type="FontFile" uid="uid://bkberxkouofus" path="res://resources/fonts/Nunito/static/Nunito-Bold.ttf" id="5_4i2ny"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gqg5"]
content_margin_top = 5.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_2g45q"]
color = Color(0.227451, 0.258824, 0.521569, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8hveo"]
color = Color(0, 0, 0, 0)

[node name="FundoPopUp" type="Panel"]
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("1_4hjoo")
script = ExtResource("2_b1cgn")

[node name="PopUp" type="Panel" parent="."]
custom_minimum_size = Vector2(750, 250)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.207031
anchor_top = 0.361111
anchor_right = 0.792969
anchor_bottom = 0.638889
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(375, 125)
theme = ExtResource("2_sm57t")
metadata/_edit_use_anchors_ = true

[node name="ContainerVertical" type="VBoxContainer" parent="PopUp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(375, 200)

[node name="Titulo" type="Label" parent="PopUp/ContainerVertical"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_afug0")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_4gqg5")
text = "ATENÇÃO"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Separador" type="HSeparator" parent="PopUp/ContainerVertical"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_2g45q")

[node name="Conteúdo" type="Label" parent="PopUp/ContainerVertical"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_4i2ny")
theme_override_font_sizes/font_size = 26
text = "Ocorreu um erro"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="ContainerBotoes" type="HBoxContainer" parent="PopUp/ContainerVertical"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Fechar" type="Button" parent="PopUp/ContainerVertical/ContainerBotoes"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
text = "Fechar"

[node name="Separador2" type="HSeparator" parent="PopUp/ContainerVertical"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_8hveo")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
